# Aalforreca

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: AalforrecaEngineConfig.h.in  CMakeLists.txt
Engine/include/Aalforreca/: Aalforreca.h
Engine/include/Aalforreca/Core/: application.h  entry_point.h  log.h  pointers.h
Engine/include/Aalforreca/core/: application.h  entry_point.h  log.h  mouse_codes.h
Engine/include/Aalforreca/events/: mouse_event.h
Engine/include/private/Aalforreca/: alrcpch.h
Engine/include/private/Aalforreca/core/: vendor_initializer.h  yaml_config_impl.h
Engine/include/private/Aalforreca/opengl/: opengl_graphics_api.h  opengl_graphics_context.h
Engine/include/public/Aalforreca/: Aalforreca.h
Engine/include/public/Aalforreca/core/: application.h  assert.h  config.h  config_manager.h  entry_point.h  exit_codes.h  helper_macros.h  image.h  key_codes.h  log.h  main.h  path_helper.h  platform_detection.h  pointers.h  root.h  singleton.h  window.h  window_manager.h
Engine/include/public/Aalforreca/events/: application_event.h  event.h  key_event.h  window_event.h
Engine/include/public/Aalforreca/graphics/: graphics_api.h  graphics_context.h
Engine/src/: alrcpch.cpp
Engine/src/Core/: application.cpp  log.cpp
Engine/src/core/: application.cpp  config.cpp  config_manager.cpp  image.cpp  log.cpp  path_helper.cpp  root.cpp  vendor_initializer.cpp  window.cpp  window_manager.cpp  yaml_config_impl.cpp
Engine/src/graphics/: graphics_api.cpp  graphics_context.cpp
Engine/src/opengl/: opengl_graphics_api.cpp  opengl_graphics_context.cpp
Engine/tests/: CMakeLists.txt
Engine/tests/src/: tests.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp  sandbox.cpp
